--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </ul>
                     </div>
 
-                    <ul class="navbar-nav flex-grow-1 justify-content-center ">
+                    <ul class="navbar-nav flex-grow-1 justify-content-center text-center ">
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#contact" tabindex="-1">تواصل معنا</a>
                         </li>
@@ -40,7 +40,7 @@
                             <a class="nav-link text-white px-md-4" href="#services">خدماتنا</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="#">الرئيسية</a>
+                            <a class="nav-link text-white" aria-current="page" href="/">الرئيسية</a>
                         </li>
                     </ul>
                 </div>
@@ -65,7 +65,7 @@
             <div class="text-center">
                 <h1 class="display-1 fw-bold text-white">ليعلم الجميع</h1>
                 <p class="secondary-color py-4 text-center fs-2 lh-base">لأن قصتك تستحق أن تروى، نساعدك في عملية الانتشار<br> المدروسة، لتسير بخطوات ثابتة</p>
-                <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#" role="button">خدمات جهر</a>
+                <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#services" role="button">خدمات جهر</a>
             </div>
         </div>
     </section>
@@ -81,11 +81,9 @@
                 <h1 class="fw-bold text-white border-bottom border-4 pb-4 d-inline-block display-4">من نحن</h1>
             </div>
 
-            <p class="text-center secondary-color m-auto py-5 fs-3 lh-base">تعمل جهر على تقديم خدمات نوعية في مجال التسويق وخدمات الأعمال بهدف سد الفجوة الموجودة في <br>السوق المحلي، والمتلخصة في الخدمات النوعية التي تقدمها جهر. بالإضافة لمساهمة جهر من خلال خدمات <br> مابعد البيع كممكن لتنفيذ الاستراتيجيات على أرض
-                الواقع.
-            </p>
+            <p class="text-center secondary-color m-auto py-5 fs-3 lh-base">جهر هي شركة سعودية تعمل على تقديم خدمات نوعية في مجال التسويق وخدمات الأعمال بهدف سد الفجوة الموجودة في السوق المحلي، بالإضافة لمساهمة جهر من خلال خدمات ما بعد البيع كممكن لتنفيذ الاستراتيجيات على أرض الواقع.</p>
 
-            <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#" role="button">تواصل معنا</a>
+            <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#contact" role="button">تواصل معنا</a>
 
         </div>
     </section>
@@ -106,7 +104,7 @@
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box3.png" class="icon" alt="">
                         <h4 class="text-white py-3">استراجيات التسويق</h4>
-                        <p class="px-5 secondary-color text-center px-1 fs-6">تتضمن هذه الخدمة تحديد الأهداف والغايات ، وتحليل عوامل العمل الداخلية والخارجية ، وتخطيط المنتج ، والتنفيذ ، وتتبع تقدمك. </p>
+                        <p class="px-5 secondary-color text-center px-1 fs-6">تتضمن هذه الخدمة تحديد أهداف الشركاء متوسطة وبعيدة المدى، ووضع منهجيات العمل الداخلية والخارجية، والمساهمة في تخطيط المنتج، والتنفيذ، وتتبع تقدم تنفيذ الاستراتيجية. </p>
                     </div>
                 </div>
 
@@ -114,7 +112,7 @@
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box2.png" class="icon" alt="">
                         <h4 class="text-white py-3">استراتيجيات العلامات التجارية</h4>
-                        <p class="px-5 secondary-color text-center px-1 fs-6">تتضمن هذه الخدمة تحديد الأهداف والغايات ، وتحليل عوامل العمل الداخلية والخارجية ، وتخطيط المنتج ، والتنفيذ ، وتتبع تقدمك. </p>
+                        <p class="px-5 secondary-color text-center px-1 fs-6">في هذه الخدمة نقوم باعداد الخطط طويلة المدى لتحقيق سلسلة من الأهداف الاستراتيجية التي تؤدي في النهاية إلى تعريف علامتك التجارية في المكان المستهدف من قبل المستهلكين.</p>
                     </div>
                 </div>
 
@@ -122,7 +120,8 @@
                     <div class="box d-flex flex-column justify-content-center text-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box1.png" class="icon" alt="">
                         <h4 class="text-white py-3 text-center">إدارة حقوق الملكية الفكرية وحق المؤلف</h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6">في هذه الخدمة نقوم ب اعداد استراتيجية شاملة لإدارة الأصول غير الملموسة للشركة على سبيل المثال ، اسم الشركة ، والخدمة ، والشعار ، إلخ.…</p>
+                        <p class="px-3 secondary-color text-center px-1 fs-6">في هذه الخدمة نقوم ب اعداد استراتيجية شاملة لإدارة الأصول غير الملموسة للشركات والأفراد على سبيل المثال لا الحصر: اسم الشركة ، والشعار ، وحماية العلامة التجارية وإدارة تسويقها وترويجها.
+                        </p>
                     </div>
                 </div>
 
@@ -130,7 +129,7 @@
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box5.png" class="icon" alt="">
                         <h4 class="text-white py-3">التسويق نيابة عن الغير</h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6">الإشراف وإجادة إدارة المواقع الإلكترونية، وتوظيف فريق عمل يتعامل مع الموقع بمهارة وتمكن مع المشرف على هذا العمل، بحيث تضم المجموعة مسؤول تسويق للموقع ليكون قادرا على الاشراف على الحملات الاعلانية للمشروع والترويج لها</p>
+                        <p class="px-3 secondary-color text-center px-1 fs-6">تهدف هذه الخدمة لتقديم خدمات إدارة العمليات التسويقية \ البيعية نيابة عن العملاء بهدف تنشيط المبيعات للمنشآت المستفيدة من الخدمة، ونملك فريق محترف يقدم هذه الخدمات النوعية للمنشآت. </p>
                     </div>
                 </div>
 
@@ -138,7 +137,7 @@
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box4.png" class="icon" alt="">
                         <h4 class="text-white py-3">إدارة العلاقات</h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6">في هذه الخدمة نقدم استراتيجية تحافظ فيها المنظمة على مستوى مستمر من المشاركة مع جمهورها. يمكن أن تحدث هذه الإدارة بين شركة وعملائها (شركة إلى مستهلك [B2C]) أو بين شركة وأعمال أخرى (شركة إلى شركة [B2B]).</p>
+                        <p class="px-3 secondary-color text-center px-1 fs-6">من خلال هذه الخدمة نقدم خدمات إدارة حسابات كبار العملاء للجهات التي لاتمتلك فرق لنجاحات العملاء والمبيعات، كما اننا نقدم الخدمات الاستشارية لتأسيس هذه الفرق وإدارتها وقياس أدائها. </p>
                     </div>
                 </div>
 
@@ -146,7 +145,7 @@
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box6.png" class="icon" alt="">
                         <h4 class="text-white py-3">العلاقات العامة</h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6">في هذه الخدمة هناك فريق متخصص يديرون الصورة العامة للمؤسسة وسمعتها ، حيث ان عملية إدارة العلاقات العامة هي عملية اتصال إستراتيجية تبني علاقات متبادلة المنفعة بين المنظمات وجماهيرها.</p>
+                        <p class="px-3 secondary-color text-center px-1 fs-6">في هذه الخدمة هناك فريق متخصص يديرون الصورة العامة للمؤسسة وسمعتها والتواصل مع الجهات الإعلامية وغيرها، حيث ان عملية إدارة العلاقات العامة هي عملية اتصال إستراتيجية ومهمة للحفاظ على صورة العلامة التجارية للجهات.</p>
                     </div>
                 </div>
 
@@ -196,8 +195,8 @@
         <div class="container text-center">
             <img src="assets/img/biglogo.png" class="py-5" alt="">
 
-            <div class="d-flex align-items-center justify-content-center pb-1"><i class="fas fa-envelope link-light pe-2"></i><span class="text-white">d.alotaibi@jahr.sa</span></div>
-            <div class="d-flex align-items-center justify-content-center"><i class="fas fa-phone-alt link-light pe-2"></i><span class="text-white">966535355556</span></div>
+            <div class="d-flex align-items-center justify-content-center pb-1"><i class="fas fa-envelope link-light pe-2"></i><span class="text-white"><a class="text-white" href="mailto:Info@jahr.sa">Info@jahr.sa</a></span></div>
+            <div class="d-flex align-items-center justify-content-center"><i class="fas fa-phone-alt link-light pe-2"></i><span class="text-white"><a class="text-white" href="tel:00966555610433">00966555610433</a></span></div>
 
 
             <ul class="nav justify-content-center align-items-center py-5">
