contact us (white text)

--- a/index.html
+++ b/index.html
@@ -165,22 +165,22 @@
         <form action="https://formsubmit.co/Info@jahr.sa" method="POST" class="text-center pt-4">
 
             <div class="mb-3">
-                <input type="text" name="name" class="form-control text-end" placeholder="الأسم كامل" required>
+                <input type="text" name="name" class="form-control text-end text-white" placeholder="الأسم كامل" required>
             </div>
 
             <div class="row">
                 <div class="mb-3 col pt-3">
-                    <input type="text" name="phone" class="form-control col-12 col-md-6 text-end" placeholder="الهاتف">
+                    <input type="text" name="phone" class="form-control col-12 col-md-6 text-end text-white" placeholder="الهاتف">
                 </div>
 
                 <div class="mb-3 col pt-3">
-                    <input type="email" name="email" class="form-control col-12 col-md-6 text-end" placeholder="البريد الإلكتروني" required>
+                    <input type="email" name="email" class="form-control col-12 col-md-6 text-end text-white" placeholder="البريد الإلكتروني" required>
                 </div>
 
             </div>
 
             <div class="mb-3 col pt-3">
-                <textarea class="form-control text-end" name="message" id="exampleFormControlTextarea1" placeholder="الرسالة" rows="3"></textarea>
+                <textarea class="form-control text-end text-white" name="message" id="exampleFormControlTextarea1" placeholder="الرسالة" rows="3"></textarea>
             </div>
             <input type="hidden" name="_captcha" value="false">
 
