--- a/index-english.html
+++ b/index-english.html
@@ -34,13 +34,13 @@
 
                     <ul class="navbar-nav flex-grow-1 justify-content-center text-center ">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#contact" tabindex="-1">تواصل معنا</a>
+                            <a class="nav-link text-white" href="#contact" tabindex="-1">Contact Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white px-md-4" href="#services">خدماتنا</a>
+                            <a class="nav-link text-white px-md-4" href="#services">Our Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="/">الرئيسية</a>
+                            <a class="nav-link text-white" aria-current="page" href="/">Main</a>
                         </li>
                     </ul>
                 </div>
@@ -63,9 +63,9 @@
     <section id="hero" class="d-flex justify-content-center align-items-center">
         <div class="container heroanimation">
             <div class="text-center">
-                <h1 class="display-1 fw-bold text-white">ليعلم الجميع</h1>
-                <p class="secondary-color py-4 text-center fs-2 lh-base">لأن قصتك تستحق أن تروى، نساعدك في عملية الانتشار<br> المدروسة، لتسير بخطوات ثابتة</p>
-                <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#services" role="button">خدمات جهر</a>
+                <h1 class="display-1 fw-bold text-white"> Let everyone khows</h1>
+                <p class="secondary-color py-4 text-center fs-2 lh-base"> Because your story is worth telling, we will assist you in expanding your horizons and taking steady moves forward.</p>
+                <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#services" role="button">Jahr Services</a>
             </div>
         </div>
     </section>
@@ -78,12 +78,12 @@
         <div class="container text-center aboutusanimation">
 
             <div id="title" class="text-center">
-                <h1 class="fw-bold text-white border-bottom border-4 pb-4 d-inline-block display-4">من نحن</h1>
+                <h1 class="fw-bold text-white border-bottom border-4 pb-4 d-inline-block display-4"> who’s jahr?</h1>
             </div>
 
-            <p class="text-center secondary-color m-auto py-5 fs-3 lh-base">جهر هي شركة سعودية تعمل على تقديم خدمات نوعية في مجال التسويق وخدمات الأعمال بهدف سد الفجوة الموجودة في السوق المحلي، بالإضافة لمساهمة جهر من خلال خدمات ما بعد البيع كممكن لتنفيذ الاستراتيجيات على أرض الواقع.</p>
+            <p class="text-center secondary-color m-auto py-5 fs-3 lh-base">Jahr is a Saudi marketing company that works to provide quality services in the field of marketing and business services with the aim of bridging the gap in the local market, in addition to Jahr's contribution through after-sales services as possible to implement strategies on the ground  </p>
 
-            <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#contact" role="button">تواصل معنا</a>
+            <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#contact" role="button">Contact Us</a>
 
         </div>
     </section>
@@ -93,7 +93,7 @@
     <section id="services" class="container py-5 my-5">
 
         <div id="title" class="text-center py-5">
-            <h1 class="fw-bold text-white border-bottom border-4 pb-4 d-inline-block display-4">خدمات جهر</h1>
+            <h1 class="fw-bold text-white border-bottom border-4 pb-4 d-inline-block display-4">jahr’s services</h1>
         </div>
 
         <div id="services-boxs" class="pt-5">
@@ -103,24 +103,24 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box3.png" class="icon" alt="">
-                        <h4 class="text-white py-3">استراجيات التسويق</h4>
-                        <p class="px-5 secondary-color text-center px-1 fs-6">تتضمن هذه الخدمة تحديد أهداف الشركاء متوسطة وبعيدة المدى، ووضع منهجيات العمل الداخلية والخارجية، والمساهمة في تخطيط المنتج، والتنفيذ، وتتبع تقدم تنفيذ الاستراتيجية. </p>
+                        <h4 class="text-white py-3"> Marketing strategies </h4>
+                        <p class="px-5 secondary-color text-center px-1 fs-6"> This service involves setting goals and objectives, analysing internal and external business factors, product planning, implementation, and tracking your progress. </p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-12">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box2.png" class="icon" alt="">
-                        <h4 class="text-white py-3 px-1 text-center">استراتيجيات العلامات التجارية</h4>
-                        <p class="px-5 secondary-color text-center px-1 fs-6">في هذه الخدمة نقوم باعداد الخطط طويلة المدى لتحقيق سلسلة من الأهداف الاستراتيجية التي تؤدي في النهاية إلى تعريف علامتك التجارية في المكان المستهدف من قبل المستهلكين.</p>
+                        <h4 class="text-white py-3 px-1 text-center"> Brand strategies </h4>
+                        <p class="px-5 secondary-color text-center px-1 fs-6"> We build long-term plans to achieve a series of strategic goals that eventually lead to the definition of your brand in the desired location by consumers. </p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-12">
                     <div class="box d-flex flex-column justify-content-center text-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box1.png" class="icon" alt="">
-                        <h4 class="text-white py-3 text-center">إدارة حقوق الملكية الفكرية وحق المؤلف</h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6">في هذه الخدمة نقوم ب اعداد استراتيجية شاملة لإدارة الأصول غير الملموسة للشركات والأفراد على سبيل المثال لا الحصر: اسم الشركة ، والشعار ، وحماية العلامة التجارية وإدارة تسويقها وترويجها.
+                        <h4 class="text-white py-3 text-center"> Intellectual Property (IP) Rights Management </h4>
+                        <p class="px-3 secondary-color text-center px-1 fs-6">We design a comprehensive strategy for managing a company's or individual's intangible assets, such as the company name, logo, brand protection, and marketing and promotion management.
                         </p>
                     </div>
                 </div>
@@ -128,24 +128,24 @@
                 <div class="col-md-4 col-sm-12 mt-md-3">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box5.png" class="icon" alt="">
-                        <h4 class="text-white py-3">التسويق نيابة عن الغير</h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6">تهدف هذه الخدمة لتقديم خدمات إدارة العمليات التسويقية \ البيعية نيابة عن العملاء بهدف تنشيط المبيعات للمنشآت المستفيدة من الخدمة، ونملك فريق محترف يقدم هذه الخدمات النوعية للمنشآت. </p>
+                        <h4 class="text-white py-3 text-center"> Marketing on behalf <br> of others </h4>
+                        <p class="px-3 secondary-color text-center px-1 fs-6">	This service seeks to provide marketing/sales operations management services on behalf of customers in order to stimulate sales in the businesses that benefit from the service, and we have a professional team that provides these high-quality services to businesses.</p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-12 mt-md-3">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box4.png" class="icon" alt="">
-                        <h4 class="text-white py-3">إدارة العلاقات</h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6">من خلال هذه الخدمة نقدم خدمات إدارة حسابات كبار العملاء للجهات التي لاتمتلك فرق لنجاحات العملاء والمبيعات، كما اننا نقدم الخدمات الاستشارية لتأسيس هذه الفرق وإدارتها وقياس أدائها. </p>
+                        <h4 class="text-white py-3"> relationship management </h4>
+                        <p class="px-3 secondary-color text-center px-1 fs-6">	We provide significant client account management solutions to businesses who do not have teams for customer success and sales, as well as consulting services to help them build, manage, and measure their performance.</p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-12 mt-md-3">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box6.png" class="icon" alt="">
-                        <h4 class="text-white py-3">العلاقات العامة</h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6">في هذه الخدمة هناك فريق متخصص يديرون الصورة العامة للمؤسسة وسمعتها والتواصل مع الجهات الإعلامية وغيرها، حيث ان عملية إدارة العلاقات العامة هي عملية اتصال إستراتيجية ومهمة للحفاظ على صورة العلامة التجارية للجهات.</p>
+                        <h4 class="text-white py-3"> Public relations </h4>
+                        <p class="px-3 secondary-color text-center px-1 fs-6"> In this service, there is a highly specialized  team that manages the organization's good reputation and interacts with the media and others, as public relations management is a strategic and important communication process to maintain the entity's brand image.</p>
                     </div>
                 </div>
 
@@ -159,32 +159,32 @@
     <section id="contact" class="py-5 my-5 container">
 
         <div id="title" class="text-center py-5">
-            <h1 class="fw-bold text-white border-bottom border-4 pb-4 d-inline-block display-4">تواصل معنا</h1>
+            <h1 class="fw-bold text-white border-bottom border-4 pb-4 d-inline-block display-4"> Contact Us </h1>
         </div>
 
         <form action="https://formsubmit.co/Info@jahr.sa" method="POST" class="text-center pt-4">
 
             <div class="mb-3">
-                <input type="text" name="name" class="form-control text-end text-white" placeholder="الأسم كامل" required>
+                <input type="text" name="name" class="form-control text-end text-white" placeholder="Full Name" required>
             </div>
 
             <div class="row">
                 <div class="mb-3 col pt-3">
-                    <input type="text" name="phone" class="form-control col-12 col-md-6 text-end text-white" placeholder="الهاتف">
+                    <input type="text" name="phone" class="form-control col-12 col-md-6 text-end text-white" placeholder="Phone Number">
                 </div>
 
                 <div class="mb-3 col pt-3">
-                    <input type="email" name="email" class="form-control col-12 col-md-6 text-end text-white" placeholder="البريد الإلكتروني" required>
+                    <input type="email" name="email" class="form-control col-12 col-md-6 text-end text-white" placeholder="Email" required>
                 </div>
 
             </div>
 
             <div class="mb-3 col pt-3">
-                <textarea class="form-control text-end text-white" name="message" id="exampleFormControlTextarea1" placeholder="الرسالة" rows="3"></textarea>
+                <textarea class="form-control text-end text-white" name="message" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
             </div>
             <input type="hidden" name="_captcha" value="false">
 
-            <button type="submit" class="btn btn-light mt-4 px-4 fw-bold">إرسال</button>
+            <button type="submit" class="btn btn-light mt-4 px-4 fw-bold">Send</button>
         </form>
 
     </section>
@@ -209,7 +209,7 @@
         </div>
 
         <div id="copyright" class="w-100 text-center">
-            <p class="py-3 text-white">جميع الحقوق محفوظة - جهر 2022</p>
+            <p class="py-3 text-white">All rights reserved - Jahr 2022</p>
         </div>
 
         </div>
