--- a/index-english.html
+++ b/index-english.html
@@ -21,6 +21,7 @@
 
             <div class="container-fluid">
 
+                <button type="button" class="btn1 btn-sm d-sm-block d-none d-sm-block d-md-block d-sm-none" > <a class="text-white" href="index.html">Arabic</a></button>
 
                 <div class="collapse navbar-collapse container-fluid order-2 order-md-2" id="navbarTogglerDemo03">
 
@@ -42,7 +43,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" aria-current="page" href="/">Main</a>
                         </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-white d-sm-block d-md-none" aria-current="page" href="index.html">Arabic</a>
+                        </li>
                     </ul>
+                   
                 </div>
 
 
@@ -165,22 +170,22 @@
         <form action="https://formsubmit.co/Info@jahr.sa" method="POST" class="text-center pt-4">
 
             <div class="mb-3">
-                <input type="text" name="name" class="form-control text-end text-white" placeholder="Full Name" required>
+                <input type="text" name="name" class="form-control  text-white" placeholder="Full Name" required>
             </div>
 
             <div class="row">
                 <div class="mb-3 col pt-3">
-                    <input type="text" name="phone" class="form-control col-12 col-md-6 text-end text-white" placeholder="Phone Number">
+                    <input type="text" name="phone" class="form-control col-12 col-md-6  text-white" placeholder="Phone Number">
                 </div>
 
                 <div class="mb-3 col pt-3">
-                    <input type="email" name="email" class="form-control col-12 col-md-6 text-end text-white" placeholder="Email" required>
+                    <input type="email" name="email" class="form-control col-12 col-md-6  text-white" placeholder="Email" required>
                 </div>
 
             </div>
 
             <div class="mb-3 col pt-3">
-                <textarea class="form-control text-end text-white" name="message" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
+                <textarea class="form-control  text-white" name="message" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
             </div>
             <input type="hidden" name="_captcha" value="false">
 
