--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" aria-current="page" href="/">الرئيسية</a>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link text-white d-sm-block d-md-none" aria-current="page" href="index-english.html">English</a>
-                        </li>
+                        <button type="button" class="btn1 btn-sm  d-sm-block d-md-none" > <a class="text-white" href="index-english.html">English</a></button>
                     </ul>
                    
                     
