--- a/index-english.html
+++ b/index-english.html
@@ -43,9 +43,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" aria-current="page" href="/">Main</a>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link text-white d-sm-block d-md-none" aria-current="page" href="index.html">Arabic</a>
-                        </li>
+                        <button type="button" class="btn1 btn-sm  d-sm-block d-md-none" > <a class="text-white" href="index.html">Arabic</a></button>
                     </ul>
                    
                 </div>
