--- a/index-english.html
+++ b/index-english.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <title>JAHR - Let Everyone Know</title>
+    <title>JAHR</title>
 </head>
 
 <body>
@@ -66,8 +66,8 @@
     <section id="hero" class="d-flex justify-content-center align-items-center">
         <div class="container heroanimation">
             <div class="text-center">
-                <h1 class="display-1 fw-bold text-white"> Let everyone khows</h1>
-                <p class="secondary-color py-4 text-center fs-2 lh-base"> Because your story is worth telling, we will assist you in expanding your horizons and taking steady moves forward.</p>
+                <h1 class="display-1 fw-bold text-white"> Let everyone knows</h1>
+                <p class="secondary-color py-4 text-center fs-2 lh-base"> Because your story deserves to be told, we help you in the considered process of spreading to move with steady steps.</p>
                 <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#services" role="button">Jahr Services</a>
             </div>
         </div>
@@ -84,7 +84,8 @@
                 <h1 class="fw-bold text-white border-bottom border-4 pb-4 d-inline-block display-4"> who’s jahr?</h1>
             </div>
 
-            <p class="text-center secondary-color m-auto py-5 fs-3 lh-base">Jahr is a Saudi marketing company that works to provide quality services in the field of marketing and business services with the aim of bridging the gap in the local market, in addition to Jahr's contribution through after-sales services as possible to implement strategies on the ground  </p>
+            <p class="text-center secondary-color m-auto py-5 fs-3 lh-base">Jahr is a Saudi marketing company that works to provide quality services in the field of marketing and business services with the aim of bridging the gap in the local market, In addition, Jahr's contribution through after-sales services to implement strategies on the ground. 
+            </p>
 
             <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#contact" role="button">Contact Us</a>
 
@@ -106,16 +107,17 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box3.png" class="icon" alt="">
-                        <h4 class="text-white py-3"> Marketing strategies </h4>
-                        <p class="px-5 secondary-color text-center px-1 fs-6"> This service involves setting goals and objectives, analysing internal and external business factors, product planning, implementation, and tracking your progress. </p>
+                        <h4 class="text-white py-3 px-1 text-center"> Marketing Strategies </h4>
+                        <p class="px-5 secondary-color text-center px-1 fs-6"> This service contains the identification of medium and long-term partners' goals.
+                            Develop internal and external work methodologies. Also Contribute to product planning, implementation. and track strategy implementation progress.  </p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-12">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box2.png" class="icon" alt="">
-                        <h4 class="text-white py-3 px-1 text-center"> Brand strategies </h4>
-                        <p class="px-5 secondary-color text-center px-1 fs-6"> We build long-term plans to achieve a series of strategic goals that eventually lead to the definition of your brand in the desired location by consumers. </p>
+                        <h4 class="text-white py-3 px-1 text-center"> Brand Strategies </h4>
+                        <p class="px-5 secondary-color text-center px-1 fs-6"> We build long-term plans to achieve a series of strategic goals that eventually lead to the definition of your brand In the target place by consumers. </p>
                     </div>
                 </div>
 
@@ -123,7 +125,7 @@
                     <div class="box d-flex flex-column justify-content-center text-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box1.png" class="icon" alt="">
                         <h4 class="text-white py-3 text-center"> Intellectual Property (IP) Rights Management </h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6">We design a comprehensive strategy for managing a company's or individual's intangible assets, such as the company name, logo, brand protection, and marketing and promotion management.
+                        <p class="px-3 secondary-color text-center px-1 fs-6">We design a comprehensive strategy for managing a company's and individual's intangible assets, such as the company name, logo, brand protection, and marketing and promotion management.
                         </p>
                     </div>
                 </div>
@@ -131,7 +133,7 @@
                 <div class="col-md-4 col-sm-12 mt-md-3">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box5.png" class="icon" alt="">
-                        <h4 class="text-white py-3 text-center"> Marketing on behalf <br> of others </h4>
+                        <h4 class="text-white py-3 text-center"> Marketing on Behalf <br> of Others </h4>
                         <p class="px-3 secondary-color text-center px-1 fs-6">	This service seeks to provide marketing/sales operations management services on behalf of customers in order to stimulate sales in the businesses that benefit from the service, and we have a professional team that provides these high-quality services to businesses.</p>
                     </div>
                 </div>
@@ -139,7 +141,7 @@
                 <div class="col-md-4 col-sm-12 mt-md-3">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box4.png" class="icon" alt="">
-                        <h4 class="text-white py-3"> relationship management </h4>
+                        <h4 class="text-white py-3 px-1 text-center"> Relationship Management </h4>
                         <p class="px-3 secondary-color text-center px-1 fs-6">	We provide significant client account management solutions to businesses who do not have teams for customer success and sales, as well as consulting services to help them build, manage, and measure their performance.</p>
                     </div>
                 </div>
@@ -147,8 +149,8 @@
                 <div class="col-md-4 col-sm-12 mt-md-3">
                     <div class="box d-flex flex-column justify-content-center align-items-center mx-2 mx-lg-5 py-5">
                         <img src="assets/img/icons/box6.png" class="icon" alt="">
-                        <h4 class="text-white py-3"> Public relations </h4>
-                        <p class="px-3 secondary-color text-center px-1 fs-6"> In this service, there is a highly specialized  team that manages the organization's good reputation and interacts with the media and others, as public relations management is a strategic and important communication process to maintain the entity's brand image.</p>
+                        <h4 class="text-white py-3"> Public Relations </h4>
+                        <p class="px-3 secondary-color text-center px-1 fs-6"> In this service, there is a highly specialized  team that manages the organization's good reputation and interacts with the media and others. public relations management is a strategic and important communication process to maintain the entity's brand image.</p>
                     </div>
                 </div>
 
