--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h1 class="fw-bold text-white border-bottom border-4 pb-4 d-inline-block display-4">من نحن</h1>
             </div>
 
-            <p class="text-center secondary-color m-auto py-5 fs-3 lh-base">جهر هي شركة سعودية تعمل على تقديم خدمات نوعية في مجال التسويق وخدمات الأعمال بهدف سد الفجوة الموجودة في السوق المحلي، بالإضافة لمساهمة جهر من خلال خدمات ما بعد البيع كممكن لتنفيذ الاستراتيجيات على أرض الواقع.</p>
+            <p class="text-center secondary-color m-auto py-5 fs-3 lh-base">جهر هي شركة سعودية تعمل على تقديم خدمات نوعية في مجال التسويق وخدمات الأعمال بهدف سد الفجوة الموجودة في السوق المحلي، بالإضافة لمساهمة جهر من خلال خدمات ما بعد البيع لتنفيذ الاستراتيجيات على أرض الواقع.</p>
 
             <a class="btn btn-light pt-1 pb-2 px-3 fw-bold" href="#contact" role="button">تواصل معنا</a>
 
