--- a/index-english.html
+++ b/index-english.html
@@ -10,7 +10,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>JAHR</title>
 </head>
 
@@ -19,42 +19,30 @@
     <header>
         <nav class="container navbar navbar-expand-md navbar-light">
 
-            <div class="container-fluid">
+            <div class="container-fluid justify-content-center justify-content-md-between">
 
-                <button type="button" class="btn1 btn-sm d-sm-block d-none d-sm-block d-md-block d-sm-none" > <a class="text-white" href="index.html">Arabic</a></button>
-
-                <div class="collapse navbar-collapse container-fluid order-2 order-md-2" id="navbarTogglerDemo03">
-
-                    <div id="social" class="d-none d-md-block">
-                        <ul class="nav">
-                            <li class="nav-item"><a href="https://www.snapchat.com/add/jahrksa" class=" link-light"><i class="fab fa-snapchat-ghost"></i></a></li>
-                            <li class="nav-item"><a href="https://twitter.com/JahrKSA" class="px-3 link-light"><i class="fab fa-twitter"></i></a></li>
-                            <li class="nav-item"><a href="https://www.instagram.com/jahrksa/" class=" link-light"><i class="fab fa-instagram"></i></a></li>
-                        </ul>
-                    </div>
-
-                    <ul class="navbar-nav flex-grow-1 justify-content-center text-center ">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#contact" tabindex="-1">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white px-md-4" href="#services">Our Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="/">Main</a>
-                        </li>
-                        <button type="button" class="btn1 btn-sm  d-sm-block d-md-none" > <a class="text-white" href="index.html">Arabic</a></button>
-                    </ul>
-                   
-                </div>
-
-
-                <div id="logo" class="navbar-brand order-1 order-md-2">
+                <div id="logo" class="navbar-brand ">
                     <img src="assets/img/logo.png" alt="">
                 </div>
                 <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
+
+                <div class="collapse navbar-collapse container-fluid" id="navbarTogglerDemo03">
+
+                    <ul class="navbar-nav flex-grow-1 justify-content-center text-center">
+                        <li class="nav-item"><a class="nav-link text-white" aria-current="page" href="/">Main</a></li>
+                        <li class="nav-item"><a class="nav-link text-white px-md-4" href="#services">Our Services</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#contact">Contact Us</a></li>
+                    </ul>
+
+                    <ul class="nav justify-content-center">
+                        <li class="nav-item social-link"><a class="text-white" href="https://www.snapchat.com/add/jahrksa"><i class="fab fa-snapchat-ghost"></i></a></li>
+                        <li class="nav-item social-link"><a class="text-white" href="https://twitter.com/JahrKSA"><i class="fab fa-twitter"></i></a></li>
+                        <li class="nav-item social-link"><a class="text-white" href="https://www.instagram.com/jahrksa/"><i class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item social-link social-link-transparent"><a class="text-white" href="index.html">ع</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
@@ -198,11 +186,11 @@
     <!-- --------------------------------------------------------------------------------------------------------------------------------- -->
 
     <footer class='py-5 mt-5 d-flex flex-column justify-content-center align-items-center'>
-        <div class="container text-center">
+        <div dir="ltr" class="container text-center">
             <img src="assets/img/biglogo.png" class="py-5" alt="">
 
-            <div class="d-flex align-items-center justify-content-center pb-1"><i class="fas fa-envelope link-light pe-2"></i><span class="text-white"><a class="text-white" href="mailto:Info@jahr.sa">Info@jahr.sa</a></span></div>
-            <div class="d-flex align-items-center justify-content-center"><i class="fas fa-phone-alt link-light pe-2"></i><span class="text-white"><a class="text-white" href="tel:00966504668884">00966504668884</a></span></div>
+            <div dir="ltr" class="d-flex align-items-center justify-content-center pb-1"><i class="fas fa-envelope link-light pe-2"></i><span class="text-white"><a class="text-white" href="mailto:Info@jahr.sa">Info@jahr.sa</a></span></div>
+            <div dir="ltr" class="d-flex align-items-center justify-content-center"><i class="fas fa-phone-alt link-light pe-2"></i><span class="text-white"><a class="text-white" href="tel:00966504668884">00966504668884</a></span></div>
 
 
             <ul class="nav justify-content-center align-items-center py-5">
